# Paste

./: .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: bundle-dmg-simple.sh  sign-macos-app.sh
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  display.rs  focus.rs  lib.rs  preview_window.rs
src-tauri/src/clipboard/: files.rs  hash.rs  macos.rs  mod.rs  watcher.rs
src-tauri/src/shortcuts/: manager.rs
src-tauri/src/storage/: cleanup.rs  db.rs  mod.rs  models.rs
src/components/: CategoryTabs.tsx  ClipItem.tsx  ClipboardList.tsx  ContextMenu.tsx  EmptyState.tsx  FilterBar.tsx  GroupEditorModals.tsx  GroupPicker.tsx  ImagePreviewApp.tsx  KeyRecorder.tsx  MainApp.tsx  OcrResult.tsx  Preview.tsx  SearchBar.tsx  Settings.tsx  SettingsApp.tsx  Skeleton.tsx  Toast.tsx
src/hooks/: useGroupEditor.ts  useHotkeyHelp.ts  useShortcut.ts
src/lib/: animations.ts  clipType.ts  fuzzy.ts  groupColors.ts  ipc.ts  utils.ts
src/stores/: clipStore.ts  settingsStore.ts
src/styles/: globals.css
