[package]
name = "paste"
version = "0.1.0"
description = "Clipboard history manager"
authors = ["wangk"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.0", features = ["bundled"] }
arboard = "3.6.1"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
uuid = { version = "1.23.1", features = ["v4"] }
image = "0.25.10"
base64 = "0.22.1"
regex = "1.12.3"
once_cell = "1.21.4"
parking_lot = "0.12.5"
thiserror = "2.0.18"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-shell = "2.3.5"
enigo = "0.6.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
objc2 = "0.6.1"
objc2-foundation = "0.3.2"
objc2-app-kit = { version = "0.3.2", features = ["NSPasteboard"] }

